# TI-S2

./: .gitignore  .markdown_link_check.json  Portfolio-items.md  Portfolio-tems.md  Programma.md  README.md  SDG.md  SDG_ideeen.txt  Semesterindeling S2 1D 4dgs week.drawio  Semesterindeling Template 1D 4dgs week.drawio  VerantwoordingEP.md  Verantwoordingsdocument_TI_S2.md  Verantwoordingsdocument_tips.md  git_instructies_terminal_synchro.txt  package-lock.json
S2_cpp_slides/: package.json
_markdown-template/: README.md
_slidev/: .gitignore  .gitmodules  C++_TechInf.md  C++_geschiedenis.md  Makefile  README.md  TI-S2-kick-off.md  package.json  schuifregister.md  slides.md  vite.config.ts
hardware-interfacing/: README.md
infrastructuur/: README.md
programma/: README - 2024-25-Periode-CD.md  README - 2025-2026.md  README-2526-CD.md  README-2627-AB.md  README.md  README_old.md  WeekZesPowerpoint.pptx  programma-1-wire.md  programma-ADC.md  programma-PWM.md  programma-SPI.md  programma-activity-diagrammen.md  programma-c++basis.md  programma-circuit-multimeter-weerstand.md  programma-comparator-mosfet.md  programma-electrische-grootheden.md  programma-fsm.md  programma-functionele-requirements.md  programma-i2c-1.md  programma-i2c-2-3.md  programma-iets-uitrekenen.md  programma-infrastructuur.md  programma-kirchoff-led.md  programma-niet-functionele-requirements.md  programma-oscilloscope-1.md  programma-oscilloscope-2.md  programma-rekenen-met-eenheden.md  programma-solderen.md  (+11 more)
software/inrichten-ontwikkelomgeving/sfml_auto_test/auto_new/: CMakeLists.txt  main.cpp
(+579 files in other folders)
